@@ -466,7 +466,7 @@ load_module (struct pkl_parser *parser,
 %token COMPUTED          _("keyword `computed'")
 %token IMMUTABLE
 %token BUILTIN_RAND BUILTIN_GET_ENDIAN BUILTIN_SET_ENDIAN
-%token BUILTIN_SET_IOS BUILTIN_CLOSE
+%token BUILTIN_CLOSE
 %token BUILTIN_IOSIZE BUILTIN_IOFLAGS BUILTIN_IOGETB BUILTIN_IOSETB
 %token BUILTIN_GETENV BUILTIN_FORGET BUILTIN_GET_TIME BUILTIN_IOLIST
 %token BUILTIN_STRACE BUILTIN_TERM_RGB_TO_COLOR BUILTIN_SLEEP
@@ -2269,8 +2269,7 @@ comp_stmt:
         ;
 
 builtin:
-          BUILTIN_SET_IOS       { $$ = PKL_AST_BUILTIN_SET_IOS; }
-        | BUILTIN_CLOSE         { $$ = PKL_AST_BUILTIN_CLOSE; }
+          BUILTIN_CLOSE         { $$ = PKL_AST_BUILTIN_CLOSE; }
         | BUILTIN_GETENV        { $$ = PKL_AST_BUILTIN_GETENV; }
         | BUILTIN_FORGET        { $$ = PKL_AST_BUILTIN_FORGET; }
         | BUILTIN_TERM_GET_COLOR { $$ = PKL_AST_BUILTIN_TERM_GET_COLOR; }
